--- a/style.css
+++ b/style.css
@@ -13,12 +13,17 @@ html, body{
     width: 100%;
     height: 100%;
 }
-
+#main{
+   background-color: #222222;
+   overflow-x: hidden; 
+}
 .page1{
     height: 100vh;
     width: 100vw;
     background-color: #C4BCB3;
     position: relative;
+    overflow-x: hidden;
+
 }
 .nav{
     height: 80px;
@@ -176,5 +181,12 @@ html, body{
 
 .page1 h1{
     font-family: canopee;
-    font-size: 550px;
+    font-size: 560px;
+    font-weight: 100;
+    background-color: #1C1C19;
+    color: #C4BCB3;
+    line-height: 460px;
+    width: 94%;
+    margin-left: 2.5%;
+    letter-spacing: -25px;
 }
