--- a/style.css
+++ b/style.css
@@ -9,46 +9,54 @@
     box-sizing: border-box;
 }
 
-html, body{
+html,
+body {
     width: 100%;
     height: 100%;
 }
-#main{
-   background-color: #222222;
-   overflow-x: hidden; 
+
+#main {
+    background-color: #222222;
+    overflow-x: hidden;
 }
-.page1{
-    height: 100vh;
+
+.page1 {
+    height: 140vh;
     width: 100vw;
+    overflow: hidden;
     background-color: #C4BCB3;
     position: relative;
     overflow-x: hidden;
 
 }
-.nav{
+
+.nav {
     height: 80px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 30px;
-    border-bottom:  1px solid #222222;
+    border-bottom: 1px solid #222222;
 }
-.nav img{
+
+.nav img {
     height: 20px;
     width: 30%;
 }
-.nav h5{
+
+.nav h5 {
     font-size: 20px;
     font-weight: 100;
     width: 30%;
 }
-.nav i{
+
+.nav i {
     width: 30%;
     text-align: right;
 }
 
-.section{
+.section {
     /* background-color: red; */
     height: 400px;
     display: flex;
@@ -58,11 +66,12 @@ html, body{
 
 }
 
-.section .sec-1{
+.section .sec-1 {
     width: 30%;
     height: 100%;
     /* background-color: blue; */
 }
+
 .section .sec-2 {
     width: 35%;
     height: 100%;
@@ -72,42 +81,46 @@ html, body{
     text-align: center;
     border-right: 1px solid #595959;
 }
+
 .section .sec-3 {
     width: 30%;
     height: 100%;
     /* background-color: blue; */
 }
 
-.sec-1 .image-div{
+.sec-1 .image-div {
     height: 55%;
     width: 100%;
     overflow: hidden;
 }
+
 .sec-3 .image-div {
     height: 55%;
     width: 100%;
     overflow: hidden;
 }
 
-.image-div img{
+.image-div img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     transition: all ease-in-out 0.43s;
 }
+
 .image-div:hover img {
     scale: 1.1;
 
 }
 
-.sec-1 h4{
+.sec-1 h4 {
     font-size: 22px;
     margin-top: 20px;
     margin-bottom: 10px;
     font-family: canopee;
 
 }
-.sec-1 h4 span{
+
+.sec-1 h4 span {
     background-color: #B83C12;
     color: #C4BCB3;
     font-weight: 100;
@@ -116,7 +129,8 @@ html, body{
     border-radius: 5px;
     margin-left: 5px;
 }
-.sec-1 p{
+
+.sec-1 p {
     font-size: 22px;
     font-family: domaine;
     font-weight: 100;
@@ -148,12 +162,13 @@ html, body{
     color: #515151;
 }
 
-.sec-2 h2{
+.sec-2 h2 {
     font-family: canopee;
     font-size: 75px;
     font-weight: 100;
 
 }
+
 .sec-2 h3 {
     font-family: domaine;
     font-size: 45px;
@@ -162,6 +177,7 @@ html, body{
     color: #2f2f2f;
 
 }
+
 .sec-2 h5 span {
     font-family: domaine;
     font-size: 20px;
@@ -170,6 +186,7 @@ html, body{
     color: black;
 
 }
+
 .sec-2 h5 {
     font-family: domaine;
     font-size: 20px;
@@ -179,7 +196,7 @@ html, body{
 
 }
 
-.page1 h1{
+.page1 h1 {
     font-family: canopee;
     font-size: 560px;
     font-weight: 100;
@@ -189,4 +206,89 @@ html, body{
     width: 94%;
     margin-left: 2.5%;
     letter-spacing: -25px;
+}
+
+.page2 {
+    height: 150vh;
+    width: 100%;
+    background-color: #C4BCB3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 40px;
+
+}
+
+.page2-left {
+    height: 100%;
+    width: 45%;
+    /* background-color: red ; */
+    padding-right: 40px;
+    border-right: 1px solid #595959;
+}
+.page2-left h2{
+    font-size: 120px;
+    text-align: center;
+    font-family: canopee;
+    line-height: 145px; 
+    font-weight: 100;
+}
+.page2-left h2 span{
+    font-size: 220px;
+    font-weight: 400;
+}
+.page2-left img{
+    height: 50%;
+    width: 100%; 
+    object-fit: cover;
+}
+
+.page2-left p {
+  font-size: 30px;
+  font-family: domaine;
+  color: #222222;
+  margin-top: 10px;
+  font-weight: 100;
+}
+ 
+.page2-right {
+    height: 100%;
+    width: 60%;
+    padding: 0 60px;
+}
+.page2-right img{
+    height: 60%;
+    width: 100%;
+    object-fit: cover;
+}
+.page2-right h1{
+    font-size: 88px;
+    font-family: canopee;
+    letter-spacing: -1px;
+    font-weight: 100;
+}
+
+.page3{
+    position: relative;
+    padding-bottom: 100px ;
+    background-color: #C4BCB3;
+}
+.page3 h1{
+    font-size: 400px;
+    background-color: #1C1C19;
+    font-family: canopee;
+    color: #C4BCB3;
+    font-weight: 100;
+    width: fit-content;
+    letter-spacing: -5px;
+    margin-left: 2%;
+    padding: 0 20px;
+    line-height: 350px;
+}
+.page3 img{
+    height: 360px;
+    position: absolute;
+    top: 0;
+    right: 5%;
+
 }
